@@ -1,439 +1,104 @@
 package br.com.xbrain.autenticacao.modules.usuario.controller;
 
-import br.com.xbrain.autenticacao.modules.agenteautorizadonovo.client.AgenteAutorizadoNovoClient;
+import br.com.xbrain.autenticacao.config.OAuth2ResourceConfig;
+import br.com.xbrain.autenticacao.modules.comum.dto.PageRequest;
 import br.com.xbrain.autenticacao.modules.comum.enums.ESituacao;
 import br.com.xbrain.autenticacao.modules.comum.enums.Eboolean;
-import br.com.xbrain.autenticacao.modules.comum.service.FileService;
-import br.com.xbrain.autenticacao.modules.email.service.EmailService;
 import br.com.xbrain.autenticacao.modules.equipevenda.service.EquipeVendaD2dService;
-import br.com.xbrain.autenticacao.modules.equipevenda.service.EquipeVendasUsuarioService;
-import br.com.xbrain.autenticacao.modules.feeder.service.FeederService;
-import br.com.xbrain.autenticacao.modules.parceirosonline.dto.AgenteAutorizadoResponse;
-import br.com.xbrain.autenticacao.modules.parceirosonline.dto.UsuarioAgenteAutorizadoResponse;
-import br.com.xbrain.autenticacao.modules.parceirosonline.service.AgenteAutorizadoClient;
-import br.com.xbrain.autenticacao.modules.site.service.SiteService;
 import br.com.xbrain.autenticacao.modules.usuario.dto.*;
-import br.com.xbrain.autenticacao.modules.usuario.enums.CodigoCargo;
 import br.com.xbrain.autenticacao.modules.usuario.enums.CodigoMotivoInativacao;
 import br.com.xbrain.autenticacao.modules.usuario.enums.ECanal;
-import br.com.xbrain.autenticacao.modules.usuario.model.Usuario;
-import br.com.xbrain.autenticacao.modules.usuario.predicate.UsuarioPredicate;
-import br.com.xbrain.autenticacao.modules.usuario.repository.UsuarioRepository;
-import br.com.xbrain.autenticacao.modules.usuario.service.CargoService;
-import br.com.xbrain.autenticacao.modules.usuario.service.SubCanalService;
-import br.com.xbrain.autenticacao.modules.usuario.service.UsuarioClientService;
+import br.com.xbrain.autenticacao.modules.usuario.event.UsuarioSubCanalObserver;
 import br.com.xbrain.autenticacao.modules.usuario.service.UsuarioService;
-import com.google.common.collect.Lists;
 import com.google.common.collect.Sets;
-import helpers.Usuarios;
 import lombok.SneakyThrows;
-import org.junit.Assert;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.mockito.Matchers;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.boot.test.mock.mockito.SpyBean;
+import org.springframework.boot.test.mock.mockito.MockBeans;
+import org.springframework.context.annotation.Import;
 import org.springframework.http.MediaType;
 import org.springframework.mock.web.MockMultipartFile;
+import org.springframework.security.oauth2.provider.token.TokenStore;
+import org.springframework.security.test.context.support.WithAnonymousUser;
+import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.jdbc.Sql;
 import org.springframework.test.context.junit4.SpringRunner;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
-import org.springframework.transaction.annotation.Transactional;
 
-import javax.persistence.EntityManager;
+import javax.servlet.http.HttpServletResponse;
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Set;
 
-import static br.com.xbrain.autenticacao.modules.comum.enums.ETipoFeederMso.EMPRESARIAL;
-import static br.com.xbrain.autenticacao.modules.comum.enums.ETipoFeederMso.RESIDENCIAL;
 import static com.google.common.io.ByteStreams.toByteArray;
-import static helpers.TestsHelper.*;
-import static helpers.Usuarios.*;
-import static java.util.Arrays.asList;
+import static helpers.TestsHelper.convertObjectToJsonBytes;
+import static helpers.TestsHelper.convertObjectToJsonString;
+import static helpers.Usuarios.ADMIN;
 import static java.util.Collections.singletonList;
-import static org.hamcrest.Matchers.*;
-import static org.junit.Assert.assertEquals;
+import static org.hamcrest.Matchers.containsInAnyOrder;
+import static org.hamcrest.Matchers.hasSize;
 import static org.mockito.Matchers.any;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
-import static org.thymeleaf.util.StringUtils.concat;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
+@AutoConfigureMockMvc
 @ActiveProfiles("test")
 @RunWith(SpringRunner.class)
-@SpringBootTest
-@AutoConfigureMockMvc
-@Transactional
-@Sql("classpath:/tests_database.sql")
+@WebMvcTest(controllers = UsuarioGerenciaController.class)
+@MockBeans({
+    @MockBean(EquipeVendaD2dService.class),
+    @MockBean(UsuarioSubCanalObserver.class),
+    @MockBean(TokenStore.class),
+})
+@Import(OAuth2ResourceConfig.class)
 public class UsuarioGerenciaControllerTest {
 
     private static final int ID_USUARIO_HELPDESK = 101;
     private static final String API_URI = "/api/usuarios/gerencia";
+    private static final String API_URI_BACKOFFICE = "/api/usuarios/gerencia/backoffice";
 
     @Autowired
     private MockMvc mvc;
-    @Autowired
-    private UsuarioRepository repository;
-    @Autowired
-    private EntityManager entityManager;
-    @SpyBean
+    @MockBean
     private UsuarioService usuarioService;
-    @MockBean
-    private EmailService emailService;
-    @MockBean
-    private FileService fileService;
-    @MockBean
-    private EquipeVendaD2dService equipeVendaD2dService;
-    @MockBean
-    private EquipeVendasUsuarioService equipeVendasUsuarioService;
-    @MockBean
-    private AgenteAutorizadoClient agenteAutorizadoClient;
-    @MockBean
-    private AgenteAutorizadoNovoClient agenteAutorizadoNovoClient;
-    @MockBean
-    private SiteService siteService;
-    @MockBean
-    private UsuarioClientService usuarioClientService;
-    @SpyBean
-    private CargoService cargoService;
-    @MockBean
-    private FeederService feederService;
-    @MockBean
-    private SubCanalService subCanalService;
-
-    @Test
-    public void getAll_deveRetornarUnauthorized_quandoNaoInformarAToken() throws Exception {
-        mvc.perform(get(API_URI)
-                .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isUnauthorized());
-    }
 
     @Test
     @SneakyThrows
-    public void save_deveDarUnauthorized_quandoUsuarioNaoTiverPermissao() {
-        mvc.perform(post(API_URI)
-                .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isUnauthorized());
-    }
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void save_deveSalvarNovoUsuario_seUsuarioTiverPermissao() {
+        var usuario = umUsuario("usuario teste");
 
-    @Test
-    @SneakyThrows
-    public void save_deveRetornarForbidden_quandoNaoTiverPermissaoParaGerenciaDeUsuario() {
-        mvc.perform(post(API_URI)
-                .header("Authorization", getAccessToken(mvc, HELP_DESK))
-                .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isForbidden());
-    }
-
-    @Test
-    @SneakyThrows
-    public void save_deveRetornarBadRequest_quandoUsuarioComApenasUmSubCanalEstiverEmEquipeComOutroSubCanal() {
-        when(equipeVendaD2dService.getSubCanaisDaEquipeVendaD2dByUsuarioId(1660123)).thenReturn(List.of(3));
-
-        mvc.perform(fileUpload(API_URI)
-                .file(umUsuario(umUsuarioSupervisorD2d()))
-                .contentType(MediaType.MULTIPART_FORM_DATA)
-                .header("Authorization", getAccessToken(mvc, ADMIN)))
-            .andExpect(status().isBadRequest())
-            .andExpect(jsonPath("$[0].message",
-                is("Não foi possível editar o usuário, pois ele possui vínculo com equipe(s) com outro subcanal.")));
-
-        verify(usuarioService, never()).save(any(), any());
-    }
-
-    @Test
-    @SneakyThrows
-    public void save_deveRetornarBadRequest_quandoUsuarioComMaisDeUmSubCanalEstiverEmEquipeComOutroSubCanal() {
-        when(equipeVendaD2dService.getSubCanaisDaEquipeVendaD2dByUsuarioId(1660123)).thenReturn(List.of(1, 3));
-
-        mvc.perform(fileUpload(API_URI)
-                .file(umUsuario(umUsuarioCoordenadorD2d()))
-                .contentType(MediaType.MULTIPART_FORM_DATA)
-                .header("Authorization", getAccessToken(mvc, ADMIN)))
-            .andExpect(status().isBadRequest())
-            .andExpect(jsonPath("$[0].message",
-                is("Não foi possível editar o usuário, pois ele possui vínculo com equipe(s) com outro subcanal.")));
-
-        verify(usuarioService, never()).save(any(), any());
-    }
-
-    @Test
-    @SneakyThrows
-    public void save_deveRetornarBadRequest_quandoUsuarioSemCanalD2dEstiverEmEquipeDoCanalD2d() {
-        when(equipeVendaD2dService.getSubCanaisDaEquipeVendaD2dByUsuarioId(1660123)).thenReturn(List.of(1));
-
-        mvc.perform(fileUpload(API_URI)
-                .file(umUsuario(umUsuarioQueEraCanalD2dAlterandoParaCanalAtivo()))
-                .contentType(MediaType.MULTIPART_FORM_DATA)
-                .header("Authorization", getAccessToken(mvc, ADMIN)))
-            .andExpect(status().isBadRequest())
-            .andExpect(jsonPath("$[0].message",
-                is("Não foi possível editar o usuário, pois ele possui vínculo com equipe(s) do Canal D2D PRÓPRIO.")));
-
-        verify(usuarioService, never()).save(any(), any());
-    }
-
-    @Test
-    @SneakyThrows
-    public void alterar_deveRetornarErro_quandoUsuarioPertenceEquipe() {
-        when(equipeVendasUsuarioService.buscarUsuarioEquipeVendasPorId(anyInt())).thenReturn(List.of(1));
-        mvc.perform(put(API_URI)
-                .header("Authorization", getAccessToken(mvc, OPERACAO_GERENTE_COMERCIAL))
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(convertObjectToJsonBytes(umUsuarioParaAtualizacao("Pedro", 430, 10, 3, "731.407.220-52"))))
-            .andExpect(status().isBadRequest())
-            .andExpect(jsonPath("$[0].message", is("Usuário já está cadastrado em outra equipe")));
-    }
-
-    @Test
-    @SneakyThrows
-    public void alterar_deveRetornarOk_quandoUsuarioPossuiDepartamentoNaoVerificado() {
-        when(equipeVendasUsuarioService.buscarUsuarioEquipeVendasPorId(anyInt())).thenReturn(List.of(1));
-        mvc.perform(put(API_URI)
-                .header("Authorization", getAccessToken(mvc, OPERACAO_GERENTE_COMERCIAL))
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(convertObjectToJsonBytes(umUsuarioParaAtualizacao("Pedro", 432, 10, 6, "132.355.930-20"))))
+        mvc.perform(MockMvcRequestBuilders
+                .fileUpload(API_URI)
+                .file(umUsuario(usuario))
+                .accept(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(usuario)))
             .andExpect(status().isOk());
+
+        verify(usuarioService).save(usuario, null);
     }
 
     @Test
     @SneakyThrows
-    public void alterar_deveRetornarOk_quandoUsuarioNaoPertenceAEquipe() {
-        when(equipeVendasUsuarioService.buscarUsuarioEquipeVendasPorId(anyInt())).thenReturn(List.of(1));
-        mvc.perform(put(API_URI)
-                .header("Authorization", getAccessToken(mvc, OPERACAO_GERENTE_COMERCIAL))
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(convertObjectToJsonBytes(umUsuarioParaAtualizacao("Pedro", 431, 10, 3, "122.861.350-88"))))
-            .andExpect(status().isOk());
-    }
-
-    @Test
-    public void getAll_deveRetornarForbidden_quandoNaoTiverPermissaoParaGerenciaDeUsuario() throws Exception {
-        mvc.perform(get(API_URI)
-                .header("Authorization", getAccessToken(mvc, HELP_DESK))
-                .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isForbidden());
-    }
-
-    @Test
-    public void getById_deveRetornarOUsuario_quandoInformadoOId() throws Exception {
-        mvc.perform(get(concat(API_URI, "/", ID_USUARIO_HELPDESK))
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$.id", is(ID_USUARIO_HELPDESK)))
-            .andExpect(jsonPath("$.nome", is("HELPDESK")))
-            .andExpect(jsonPath("$.nivelId", notNullValue()));
-    }
-
-    @Test
-    public void getAll_deveFiltrarPorEmail_quandoOFiltroForPassado() throws Exception {
-        mvc.perform(get(API_URI + "?email=HELPDESK@XBRAIN.COM.BR")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$.id", is(ID_USUARIO_HELPDESK)))
-            .andExpect(jsonPath("$.nome", is("HELPDESK")));
-    }
-
-    @Test
-    public void getAll_deveRetornarTodosOsUsuarios_quandoForAdmin() throws Exception {
-        mvc.perform(get(API_URI)
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$.content", hasSize(10)))
-            .andExpect(jsonPath("$.content[0].nome", is("ADMIN")));
-    }
-
-    @Test
-    public void getAll_deveNaoRetornarOsUsuariosXbrain_quandoForNivelMso() throws Exception {
-        mvc.perform(get(API_URI)
-                .header("Authorization", getAccessToken(mvc, MSO_ANALISTAADM_CLAROMOVEL_PESSOAL))
-                .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$.content", hasSize(10)))
-            .andExpect(jsonPath("$.content[0].nome", is("Supervisor Operação")))
-            .andExpect(jsonPath("$.content[0].tiposFeeder", empty()))
-            .andExpect(jsonPath("$.content[1].nome", is("operacao_gerente_comercial")))
-            .andExpect(jsonPath("$.content[1].tiposFeeder", empty()))
-            .andExpect(jsonPath("$.content[2].nome", is("Assistente Operação")))
-            .andExpect(jsonPath("$.content[2].tiposFeeder", empty()))
-            .andExpect(jsonPath("$.content[3].nome", is("Vendedor Operação")))
-            .andExpect(jsonPath("$.content[3].tiposFeeder", empty()))
-            .andExpect(jsonPath("$.content[4].nome", is("Agente Autorizado Aprovação MSO Novos Cadastros")))
-            .andExpect(jsonPath("$.content[4].tiposFeeder", empty()))
-            .andExpect(jsonPath("$.content[5].nome", is("Operacao Supervisor NET")))
-            .andExpect(jsonPath("$.content[5].tiposFeeder", empty()))
-            .andExpect(jsonPath("$.content[6].nome", is("Mso Analista Adm Claro Pessoal")))
-            .andExpect(jsonPath("$.content[6].tiposFeeder", containsInAnyOrder(EMPRESARIAL.name(), RESIDENCIAL.name())))
-            .andExpect(jsonPath("$.content[7].nome", is("Operacao Supervisor")))
-            .andExpect(jsonPath("$.content[7].tiposFeeder", empty()))
-            .andExpect(jsonPath("$.content[8].nome", is("Operacao Gerente")))
-            .andExpect(jsonPath("$.content[8].tiposFeeder", empty()))
-            .andExpect(jsonPath("$.content[9].nome", is("Operacao Vendedor")))
-            .andExpect(jsonPath("$.content[9].tiposFeeder", empty()));
-    }
-
-    @Test
-    public void getAll_deveRetornarUsuarios_quandoFiltroForComOrganizacaoId() throws Exception {
-        mvc.perform(get(API_URI + "?organizacaoId=2")
-                .header("Authorization", getAccessToken(mvc, ADMIN)))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$.content", hasSize(3)))
-            .andExpect(jsonPath("$.content[0].nome", is("HELPDESK")))
-            .andExpect(jsonPath("$.content[0].email", is("HELPDESK@XBRAIN.COM.BR")))
-            .andExpect(jsonPath("$.content[0].tiposFeeder", empty()))
-            .andExpect(jsonPath("$.content[1].nome", is("operacao_gerente_comercial")))
-            .andExpect(jsonPath("$.content[1].email", is("operacao_gerente_comercial@net.com.br")))
-            .andExpect(jsonPath("$.content[1].tiposFeeder", empty()))
-            .andExpect(jsonPath("$.content[2].nome", is("Mso Analista Adm Claro Pessoal")))
-            .andExpect(jsonPath("$.content[2].email", is("MSO_ANALISTAADM_CLAROMOVEL_PESSOAL@NET.COM.BR")))
-            .andExpect(jsonPath("$.content[2].tiposFeeder", containsInAnyOrder(EMPRESARIAL.name(), RESIDENCIAL.name())));
-    }
-
-    @Test
-    public void getAll_deveRetornarUsuarios_quandoFiltroForComSubCanal() throws Exception {
-        mvc.perform(get(API_URI + "?subCanalId=1")
-                .header("Authorization", getAccessToken(mvc, ADMIN)))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$.content", hasSize(4)))
-            .andExpect(jsonPath("$.content[0].nome", is("ADMIN")))
-            .andExpect(jsonPath("$.content[0].email", is("ADMIN@XBRAIN.COM.BR")))
-            .andExpect(jsonPath("$.content[1].nome", is("HELPDESK")))
-            .andExpect(jsonPath("$.content[1].email", is("HELPDESK@XBRAIN.COM.BR")))
-            .andExpect(jsonPath("$.content[2].nome", is("operacao_gerente_comercial")))
-            .andExpect(jsonPath("$.content[2].email", is("operacao_gerente_comercial@net.com.br")))
-            .andExpect(jsonPath("$.content[3].nome", is("INATIVO")))
-            .andExpect(jsonPath("$.content[3].email", is("INATIVO@XBRAIN.COM.BR")));
-    }
-
-    @Test
-    public void getUsuariosCargoSuperior_deveRetornarTodos_porCargoSuperior() throws Exception {
-        mvc.perform(post(API_URI + "/cargo-superior/4")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(convertObjectToJsonBytes(
-                    UsuarioCargoSuperiorPost
-                        .builder()
-                        .cidadeIds(List.of(5578))
-                        .build())))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$", hasSize(2)))
-            .andExpect(jsonPath("$.[0].nome", is("Agente Autorizado Aprovação MSO Novos Cadastros")))
-            .andExpect(jsonPath("$.[1].nome", is("operacao_gerente_comercial")));
-    }
-
-    @Test
-    public void getUsuariosCargoSuperior_deveRetornarTodos_porCargoSuperiorAndCanalAndSubCanal() throws Exception {
-        mvc.perform(post(API_URI + "/cargo-superior/4/D2D_PROPRIO")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .param("subCanaisId", "1")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(convertObjectToJsonBytes(
-                    UsuarioCargoSuperiorPost
-                        .builder()
-                        .cidadeIds(List.of(1, 5578))
-                        .build())))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$", hasSize(1)))
-            .andExpect(jsonPath("$.[0].nome", is("operacao_gerente_comercial")));
-    }
-
-    @Test
-    public void listarUsuario_deveRetornarTodosByCnpjAa_quandoFiltrar() throws Exception {
-        mockResponseAgenteAutorizado();
-        mockResponseUsuariosAgenteAutorizado();
-
-        mvc.perform(get(API_URI + "?cnpjAa=09.489.617/0001-97")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$.content", hasSize(4)))
-            .andExpect(jsonPath("$.content[0].nome", is("ADMIN")));
-    }
-
-    @Test
-    public void listarUsuario_deveRetornarTodosByCnpjAa_quandoFiltrarPorAtivos() throws Exception {
-        mockResponseAgenteAutorizado();
-        mockResponseUsuariosAgenteAutorizado();
-
-        mvc.perform(get(API_URI)
-                .param("cnpjAa", "09.489.617/0001-97")
-                .param("situacoes", "A")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$.content", hasSize(3)))
-            .andExpect(jsonPath("$.content[1].nome", is("HELPDESK")))
-            .andExpect(jsonPath("$.content[1].situacao", is("A")));
-    }
-
-    @Test
-    public void listarUsuario_deveRetornarTodosByCnpjAa_quandoFiltrarPorInativos() throws Exception {
-        mockResponseAgenteAutorizado();
-        mockResponseUsuariosAgenteAutorizado();
-
-        mvc.perform(get(API_URI)
-                .param("cnpjAa", "09.489.617/0001-97")
-                .param("situacoes", "I")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$.content", hasSize(1)));
-    }
-
-    @Test
-    public void deveFiltrarPorNome() throws Exception {
-        mvc.perform(get(API_URI + "?nome=ADMIN")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$.content", hasSize(1)));
-    }
-
-    @Test
-    public void filtrarUser_deveFiltrarPorInativo_quandoSituacaoForInativo() throws Exception {
-        mvc.perform(get(API_URI)
-                .param("situacoes", "I")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$.content", hasSize(1)))
-            .andExpect(jsonPath("$.content[0].nome", is("INATIVO")));
-    }
-
-    @Test
-    public void filtrarUser_deveFiltrarPorRealocado_quandoSituacaoForRealocado() throws Exception {
-        mvc.perform(get(API_URI)
-                .param("situacoes", "R")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$.content", hasSize(2)))
-            .andExpect(jsonPath("$.content[0].nome", is("REALOCADO")));
-    }
-
-    @Test
-    public void deveValidarOsCamposNulosNoCadastro() throws Exception {
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void save_deveRetornarBadRequest_seCamposObrigatoriosNaoPreenchidos() {
         mvc.perform(MockMvcRequestBuilders
                 .fileUpload(API_URI)
                 .file(umUsuario(new UsuarioDto()))
-                .contentType(MediaType.MULTIPART_FORM_DATA)
-                .header("Authorization", getAccessToken(mvc, ADMIN)))
+                .contentType(MediaType.MULTIPART_FORM_DATA))
             .andExpect(status().isBadRequest())
             .andExpect(jsonPath("$", hasSize(7)))
             .andExpect(jsonPath("$[*].message", containsInAnyOrder(
@@ -447,330 +112,1240 @@ public class UsuarioGerenciaControllerTest {
     }
 
     @Test
-    public void deveValidarOCampo_throwException_quandoUnidadeNegocioVazio() throws Exception {
-        var request = umUsuario("Big");
-        request.setUnidadesNegociosId(List.of());
-        mvc.perform(MockMvcRequestBuilders
-                .fileUpload(API_URI)
-                .file(umUsuario(request))
-                .contentType(MediaType.MULTIPART_FORM_DATA)
-                .header("Authorization", getAccessToken(mvc, ADMIN)))
-            .andExpect(status().isBadRequest())
-            .andExpect(jsonPath("$.[*].message", containsInAnyOrder("O campo unidadesNegociosId é obrigatório.")));
-    }
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void save_deveRetornarBadRequest_seCampoNomeEstiverComSizeMaiorQue80() {
+        var usuario = umUsuario("Exemplo de um nome grande demais ".repeat(6));
 
-    @Test
-    public void deveValidarOCampo_throwException_quandoEmpresaVazio() throws Exception {
-        var request = umUsuario("Big");
-        request.setEmpresasId(List.of());
-        mvc.perform(MockMvcRequestBuilders
-                .fileUpload(API_URI)
-                .file(umUsuario(request))
-                .contentType(MediaType.MULTIPART_FORM_DATA)
-                .header("Authorization", getAccessToken(mvc, ADMIN)))
-            .andExpect(status().isBadRequest())
-            .andExpect(jsonPath("$.[*].message", containsInAnyOrder("O campo empresasId é obrigatório.")));
-    }
-
-    @Test
-    public void deveSalvarSemFoto() throws Exception {
-        var usuario = umUsuario("JOAO"); // deve setar o codigo do cargo
         mvc.perform(MockMvcRequestBuilders
                 .fileUpload(API_URI)
                 .file(umUsuario(usuario))
-                .contentType(MediaType.MULTIPART_FORM_DATA)
-                .header("Authorization", getAccessToken(mvc, ADMIN)))
-            .andExpect(status().isOk());
+                .contentType(MediaType.MULTIPART_FORM_DATA))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo nome precisa ter entre 0 e 80 caracteres.")));
 
-        verify(emailService, times(1)).enviarEmailTemplate(any(), any(), any(), any());
-        verify(fileService, times(0)).uploadFotoUsuario(any(), any());
-
-        List<Usuario> usuarios = Lists.newArrayList(
-            repository.findAll(new UsuarioPredicate().comNome(usuario.getNome()).build()));
-
-        assertEquals(usuarios.get(0).getNome(), usuario.getNome());
-        assertEquals(usuarios.get(0).getCpf(), "09723864592");
-        assertEquals(usuarios.get(0).getCanais(), Sets.newHashSet(ECanal.AGENTE_AUTORIZADO, ECanal.D2D_PROPRIO));
+        verifyNoMoreInteractions(usuarioService);
     }
 
     @Test
-    public void deveSalvarComFoto() throws Exception {
-        var usuario = umUsuario("JOAO");
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void save_deveRetornarBadRequest_seCampoEmailEstiverComSizeMaiorQue80() {
+        var usuario = umUsuario("teste");
+        usuario.setEmail("Exemplo de um email grande demais ".repeat(8));
+
         mvc.perform(MockMvcRequestBuilders
                 .fileUpload(API_URI)
-                .file(umFileFoto())
                 .file(umUsuario(usuario))
-                .contentType(MediaType.MULTIPART_FORM_DATA)
-                .header("Authorization", getAccessToken(mvc, ADMIN)))
-            .andExpect(status().isOk());
+                .contentType(MediaType.MULTIPART_FORM_DATA))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo email precisa ter entre 0 e 80 caracteres.")));
 
-        verify(emailService, times(1)).enviarEmailTemplate(any(), any(), any(), any());
-        verify(fileService, times(1)).uploadFotoUsuario(any(), any());
-
-        List<Usuario> usuarios = Lists.newArrayList(
-            repository.findAll(new UsuarioPredicate().comNome(usuario.getNome()).build()));
-
-        assertEquals(usuarios.get(0).getNome(), usuario.getNome());
-        assertEquals(usuarios.get(0).getCpf(), "09723864592");
-        assertEquals(usuarios.get(0).getCanais(), Sets.newHashSet(ECanal.AGENTE_AUTORIZADO, ECanal.D2D_PROPRIO));
+        verifyNoMoreInteractions(usuarioService);
     }
 
     @Test
-    public void deveSalvarAConfiguracaoDoUsuario() throws Exception {
-        var dto = new UsuarioConfiguracaoSaveDto();
-        dto.setUsuarioId(ID_USUARIO_HELPDESK);
-        dto.setRamal(1234);
-        mvc.perform(post(API_URI + "/configuracao")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(convertObjectToJsonBytes(dto)))
-            .andExpect(status().isOk());
-    }
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void save_deveRetornarBadRequest_seCampoEmail02EstiverComSizeMaiorQue80() {
+        var usuario = umUsuario("teste");
+        usuario.setEmail02("Exemplo de um email grande demais ".repeat(8));
 
-    @Test
-    public void deveAlterarAConfiguracaoDoUsuario() throws Exception {
-        var dto = new UsuarioConfiguracaoSaveDto();
-        dto.setUsuarioId(100);
-        dto.setRamal(6666);
-        mvc.perform(post(API_URI + "/configuracao")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(convertObjectToJsonBytes(dto)))
-            .andExpect(status().isOk());
-        var usuario = repository.findComplete(100).orElse(new Usuario());
-        Assert.assertEquals(usuario.getConfiguracao().getRamal(), Integer.valueOf(6666));
-    }
-
-    @Test
-    public void deveEditarSemFoto() throws Exception {
         mvc.perform(MockMvcRequestBuilders
                 .fileUpload(API_URI)
-                .file(umUsuario(umUsuarioParaEditar()))
-                .contentType(MediaType.MULTIPART_FORM_DATA)
-                .header("Authorization", getAccessToken(mvc, ADMIN)))
-            .andExpect(status().isOk());
-        var usuario = repository.findOne(ID_USUARIO_HELPDESK);
-        Assert.assertEquals(usuario.getNome(), "JOAOZINHO");
+                .file(umUsuario(usuario))
+                .contentType(MediaType.MULTIPART_FORM_DATA))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo email02 precisa ter entre 0 e 80 caracteres.")));
+
+        verifyNoMoreInteractions(usuarioService);
     }
 
     @Test
-    public void deveEditarComFoto() throws Exception {
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void save_deveRetornarBadRequest_seCampoTelefoneEstiverComSizeMaiorQue100() {
+        var usuario = umUsuario("teste");
+        usuario.setTelefone("Exemplo de um telefone grande demais ".repeat(8));
+
         mvc.perform(MockMvcRequestBuilders
                 .fileUpload(API_URI)
-                .file(umFileFoto())
-                .file(umUsuario(umUsuarioParaEditar()))
-                .contentType(MediaType.MULTIPART_FORM_DATA)
-                .header("Authorization", getAccessToken(mvc, ADMIN)))
-            .andExpect(status().isOk());
-        var usuario = repository.findOne(ID_USUARIO_HELPDESK);
-        Assert.assertEquals(usuario.getNome(), "JOAOZINHO");
-    }
-
-    @Test
-    public void deveInativarUmUsuario() throws Exception {
-        doNothing().when(usuarioClientService).alterarSituacao(anyInt());
-
-        mvc.perform(post(API_URI + "/inativar")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(convertObjectToJsonBytes(umUsuarioParaInativar())))
-            .andExpect(status().isOk());
-        var usuario = repository.findOne(ID_USUARIO_HELPDESK);
-        Assert.assertEquals(usuario.getSituacao(), ESituacao.I);
-    }
-
-    @Test
-    public void deveAlterarASenhaDeUmUsuarioEEnviarPorEmail() throws Exception {
-        mvc.perform(put(API_URI + "/100/senha")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .contentType(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk());
-        verify(emailService, times(1)).enviarEmailTemplate(any(), any(), any(), any());
-    }
-
-    @Test
-    public void deveRetornarAsPermissoesDoUsuario() throws Exception {
-        mvc.perform(get(API_URI + "/100/permissoes")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$.permissoesCargoDepartamento", is(not(empty()))))
-            .andExpect(jsonPath("$.permissoesEspeciais", hasSize(3)));
-    }
-
-    @Test
-    public void deveRetornarAsCidadesAtreladasAoUsuario() throws Exception {
-        mvc.perform(get(API_URI + "/100/cidades")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$", hasSize(1)));
-    }
-
-    @Test
-    public void deveAlterarOEmailDoUsuario() throws Exception {
-        mvc.perform(put(API_URI + "/acesso/email")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(convertObjectToJsonBytes(umRequestDadosAcessoEmail())))
-            .andExpect(status().isOk());
-        verify(emailService, times(2)).enviarEmailTemplate(any(), any(), any(), any());
-    }
-
-    @Test
-    public void deveNaoTrocarOEmailDoUsuarioQuandoForDiferenteDoDaBase() throws Exception {
-        var dto = umRequestDadosAcessoSenha();
-        dto.setEmailAtual("EMAILERRADO@XBRAIN.COM.BR");
-        mvc.perform(put(API_URI + "/acesso/email")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(convertObjectToJsonBytes(dto)))
-            .andExpect(status().isBadRequest());
-    }
-
-    @Test
-    public void deveAlterarASenhaDoUsuario() throws Exception {
-        mvc.perform(put(API_URI + "/acesso/senha")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(convertObjectToJsonBytes(umRequestDadosAcessoSenha())))
-            .andExpect(status().isOk());
-        verify(emailService, times(1)).enviarEmailTemplate(any(), any(), any(), any());
-    }
-
-    @Test
-    public void deveAlterarASenhaDoUsuarioIgnorandoSenhaAtual() throws Exception {
-        var objTest = umRequestDadosAcessoSenha();
-        objTest.setIgnorarSenhaAtual(Boolean.TRUE);
-        objTest.setSenhaAtual("");
-
-        mvc.perform(put("/api/usuarios/gerencia/acesso/senha")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(convertObjectToJsonBytes(objTest)))
-            .andExpect(status().isOk());
-        verify(emailService, times(1)).enviarEmailTemplate(any(), any(), any(), any());
-    }
-
-    @Test
-    public void deveNaoTrocarASenhaDoUsuarioQuandoForDiferenteDoDaBase() throws Exception {
-        var dto = umRequestDadosAcessoSenha();
-        dto.setSenhaAtual("SENHAINCORRETA");
-        mvc.perform(put(API_URI + "/acesso/senha")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(convertObjectToJsonBytes(dto)))
-            .andExpect(status().isBadRequest());
-    }
-
-    @Test
-    public void deveRetornarOSuperiorDoUsuario() throws Exception {
-        mvc.perform(get(API_URI + "/101/supervisor")
-                .header("Authorization", getAccessToken(mvc, Usuarios.ADMIN))
-                .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$.id", is(104)))
-            .andExpect(jsonPath("$.nome", is("operacao_gerente_comercial")))
-            .andExpect(jsonPath("$.email", is("operacao_gerente_comercial@net.com.br")));
-    }
-
-    @Test
-    public void deveRetornarOSuperioresDoUsuario() throws Exception {
-        mvc.perform(get(API_URI + "/101/supervisores")
-                .header("Authorization", getAccessToken(mvc, Usuarios.ADMIN))
-                .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$", hasSize(1)));
-    }
-
-    @Test
-    public void getCsv_CsvFormatadoCorretamente_QuandoRetornadoDoisUsuarios() throws Exception {
-        doReturn(doisUsuariosCsvResponse()).when(usuarioService).getAllForCsv(any(UsuarioFiltros.class));
-        var csv = mvc.perform(get(API_URI + "/csv")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
-            .andExpect(content().contentType("text/csv; charset=UTF-8"))
-            .andReturn()
-            .getResponse()
-            .getContentAsString();
-
-        assertEquals(
-            "\uFEFFCODIGO;NOME;EMAIL;TELEFONE;CPF;CARGO;DEPARTAMENTO;UNIDADE NEGOCIO;EMPRESA;SITUACAO;"
-                + "DATA ULTIMO ACESSO;LOGIN NETSALES;NIVEL;RAZAO SOCIAL;CNPJ;ORGANIZACAO;CANAL;HIERARQUIA\n"
-                + "1;Usuario Csv;usuario_csv@xbrain.com.br;(43) 2323-1782;754.000.720-62;Vendedor;Comercial;"
-                + "X-Brain. Claro Residencial;X-Brain. Claro TV;A;;;;;;;;\n"
-                + "2;Usuario Teste;usuario_teste@xbrain.com.br;(43) 4575-5878;048.038.280-83;Vendedor;Comercial;"
-                + "X-Brain. Residencial e Combos;X-Brain. Claro TV;A;;;;;;;;", csv);
-    }
-
-    @Test
-    public void getCsv_CsvFormatadoCorretamente_QuandoUsuarioNaoPossuirEmpresaEUnidadeNegocio() throws Exception {
-        doReturn(doisUsuariosCsvResponseSemEmpresasEUnidadesNegocios())
-            .when(usuarioService).getAllForCsv(any(UsuarioFiltros.class));
-
-        var csv = mvc.perform(get(API_URI + "/csv")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
-            .andExpect(content().contentType("text/csv; charset=UTF-8"))
-            .andReturn()
-            .getResponse()
-            .getContentAsString();
-
-        assertEquals("\uFEFFCODIGO;NOME;EMAIL;TELEFONE;CPF;CARGO;DEPARTAMENTO;UNIDADE NEGOCIO;EMPRESA;SITUACAO;"
-            + "DATA ULTIMO ACESSO;LOGIN NETSALES;NIVEL;RAZAO SOCIAL;CNPJ;ORGANIZACAO;CANAL;HIERARQUIA\n"
-            + "1;Usuario Csv;usuario_csv@xbrain.com.br;(43) 2323-1782;754.000.720-62;Vendedor;Comercial;"
-            + ";;A;;;;;;;;\n"
-            + "2;Usuario Teste;usuario_teste@xbrain.com.br;(43) 4575-5878;048.038.280-83;Vendedor;Comercial;"
-            + ";;A;;;;;;;;", csv);
-    }
-
-    @Test
-    public void validarSeUsuarioNovoCadastro_deveRetornarTrue_quandoEmailECpfNaoExistem() throws Exception {
-        mvc.perform(get(API_URI + "/existir/usuario")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .param("email", "JOHN@GMAIL.COM")
-                .param("cpf", "48503182076"))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$", is(Boolean.TRUE)));
-    }
-
-    @Test
-    public void validarSeUsuarioNovoCadastro_deveThrowValidacaoException_quandoEmailCadastrado() throws Exception {
-        mvc.perform(get(API_URI + "/existir/usuario")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .param("cpf", "48503182076")
-                .param("email", "HELPDESK@XBRAIN.COM.BR"))
+                .file(umUsuario(usuario))
+                .contentType(MediaType.MULTIPART_FORM_DATA))
             .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
             .andExpect(jsonPath("$[*].message", containsInAnyOrder(
-                "Email já cadastrado.")));
+                "O campo telefone precisa ter entre 0 e 100 caracteres.")));
+
+        verifyNoMoreInteractions(usuarioService);
     }
 
     @Test
-    public void validarSeUsuarioNovoCadastro_deveThrowValidacaoException_quandoCpfCadastrado() throws Exception {
-        mvc.perform(get(API_URI + "/existir/usuario")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
-                .param("cpf", "99898798782")
-                .param("email", "JOHN@GMAIL.COM"))
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void save_deveRetornarBadRequest_seCampoCpfEstiverComSizeMaiorQue14() {
+        var usuario = umUsuario("teste");
+        usuario.setCpf("123456781234567812");
+
+        mvc.perform(MockMvcRequestBuilders
+                .fileUpload(API_URI)
+                .file(umUsuario(usuario))
+                .contentType(MediaType.MULTIPART_FORM_DATA))
             .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
             .andExpect(jsonPath("$[*].message", containsInAnyOrder(
-                "CPF já cadastrado.")));
+                "O campo cpf precisa ter entre 0 e 14 caracteres.")));
+
+        verifyNoMoreInteractions(usuarioService);
     }
 
     @Test
-    public void getAllXbrainMsoAtivos_deveRetornarUnauthorized_quandoNaoInformarToken() throws Exception {
-        mvc.perform(get(API_URI + "/chamados/usuarios-redirecionamento/2")
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void save_deveRetornarBadRequest_seCampoRgEstiverComSizeMaiorQue25() {
+        var usuario = umUsuario("teste");
+        usuario.setRg("1234567812345678415462345154264516452164516257");
+
+        mvc.perform(MockMvcRequestBuilders
+                .fileUpload(API_URI)
+                .file(umUsuario(usuario))
+                .contentType(MediaType.MULTIPART_FORM_DATA))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo rg precisa ter entre 0 e 25 caracteres.")));
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void save_deveRetornarBadRequest_seCampoOrgaoExpedidorEstiverComSizeMaiorQue30() {
+        var usuario = umUsuario("teste");
+        usuario.setOrgaoExpedidor("Exemplo de orgaoExpedidor grande demais".repeat(6));
+
+        mvc.perform(MockMvcRequestBuilders
+                .fileUpload(API_URI)
+                .file(umUsuario(usuario))
+                .contentType(MediaType.MULTIPART_FORM_DATA))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo orgaoExpedidor precisa ter entre 0 e 30 caracteres.")));
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void save_deveRetornarBadRequest_seCampoLoginNetSalesEstiverComSizeMaiorQue120() {
+        var usuario = umUsuario("teste");
+        usuario.setLoginNetSales("Exemplo de um login grande demais".repeat(10));
+
+        mvc.perform(MockMvcRequestBuilders
+                .fileUpload(API_URI)
+                .file(umUsuario(usuario))
+                .contentType(MediaType.MULTIPART_FORM_DATA))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo loginNetSales precisa ter entre 0 e 120 caracteres.")));
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithAnonymousUser
+    public void save_deveDarUnauthorized_quandoUsuarioNaoTiverPermissao() {
+        mvc.perform(post(API_URI)
                 .accept(MediaType.APPLICATION_JSON))
             .andExpect(status().isUnauthorized());
     }
 
     @Test
-    public void getAllXbrainMsoAtivos_deveRetornarOk_quandoUsuarioForAutorizado() throws Exception {
-        mvc.perform(get(API_URI + "/chamados/usuarios-redirecionamento/2")
-                .header("Authorization", getAccessToken(mvc, ADMIN))
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"CTR_2033"})
+    public void save_deveRetornarForbidden_quandoNaoTiverPermissaoParaGerenciaDeUsuario() {
+        mvc.perform(post(API_URI)
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isForbidden());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void saveBackoffice_deveRetornarUsuarioSalvo_quandoNivelForBackoffice() {
+        var usuario = umUsuarioDtoBackoffice();
+
+        mvc.perform(post(API_URI_BACKOFFICE)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(usuario)))
+            .andExpect(status().isOk());
+
+        verify(usuarioService).salvarUsuarioBackoffice(UsuarioBackofficeDto.of(usuario));
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void saveBackoffice_deveRetornarbadRequest_seCamposObrigatoriosNaoPreenchidos() {
+        mvc.perform(post(API_URI_BACKOFFICE)
+                .content(convertObjectToJsonBytes(new UsuarioBackofficeDto()))
+                .contentType(MediaType.APPLICATION_JSON))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(6)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo nome é obrigatório.",
+                "O campo cpf é obrigatório.",
+                "O campo nascimento é obrigatório.",
+                "O campo email é obrigatório.",
+                "O campo cargoId é obrigatório.",
+                "O campo departamentoId é obrigatório.")));
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void saveBackoffice_deveRetornarBadRequest_seCampoNomeEstiverComSizeMaiorQue80() {
+        var usuario = umUsuarioDtoBackoffice();
+        usuario.setNome("um exemplo de nome grande demais".repeat(8));
+
+        mvc.perform(post(API_URI_BACKOFFICE)
+                .content(convertObjectToJsonBytes(usuario))
+                .contentType(MediaType.APPLICATION_JSON))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo nome precisa ter entre 0 e 80 caracteres.")));
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void saveBackoffice_deveRetornarBadRequest_seCampoEmailEstiverComSizeMaiorQue80() {
+        var usuario = umUsuarioDtoBackoffice();
+        usuario.setEmail("um exemplo de email grande demais".repeat(8));
+
+        mvc.perform(post(API_URI_BACKOFFICE)
+                .content(convertObjectToJsonBytes(usuario))
+                .contentType(MediaType.APPLICATION_JSON))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo email precisa ter entre 0 e 80 caracteres.")));
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void saveBackoffice_deveRetornarBadRequest_seCampoTelefoneEstiverComSizeMaiorQue100() {
+        var usuario = umUsuarioDtoBackoffice();
+        usuario.setTelefone("um exemplo de telefone grande demais".repeat(8));
+
+        mvc.perform(post(API_URI_BACKOFFICE)
+                .content(convertObjectToJsonBytes(usuario))
+                .contentType(MediaType.APPLICATION_JSON))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo telefone precisa ter entre 0 e 100 caracteres.")));
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void saveBackoffice_deveRetornarBadRequest_seCampoCpfEstiverComSizeMaiorQue14() {
+        var usuario = umUsuarioDtoBackoffice();
+        usuario.setCpf("123456781234567812");
+
+        mvc.perform(post(API_URI_BACKOFFICE)
+                .content(convertObjectToJsonBytes(usuario))
+                .contentType(MediaType.APPLICATION_JSON))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(2)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo cpf precisa ter entre 0 e 14 caracteres.",
+                "O campo cpf não é um cpf válido.")));
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void saveBackoffice_deveRetornarBadRequest_seCampoRgEstiverComSizeMaiorQue25() {
+        var usuario = umUsuarioDtoBackoffice();
+        usuario.setRg("12345678912345678912345566788951");
+
+        mvc.perform(post(API_URI_BACKOFFICE)
+                .content(convertObjectToJsonBytes(usuario))
+                .contentType(MediaType.APPLICATION_JSON))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo rg precisa ter entre 0 e 25 caracteres.")));
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"CTR_2033"})
+    public void save_deveLancarForbidden_seUsuarioNaoTiverPermissao() {
+        var usuario = umUsuarioDtoBackoffice();
+
+        mvc.perform(post(API_URI_BACKOFFICE)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(usuario)))
+            .andExpect(status().isForbidden());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithAnonymousUser
+    public void save_deveLancarUnauthorized_seUsuarioNaoTiverAutorizacao() {
+        var usuario = umUsuarioDtoBackoffice();
+
+        mvc.perform(post(API_URI_BACKOFFICE)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(usuario)))
+            .andExpect(status().isUnauthorized());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void alterar_deveRetornarOk_seUsuarioTiverPermissao() {
+        var usuario = umUsuarioParaAtualizacao("Pedro", 431, 10, 3, "122.861.350-88");
+
+        mvc.perform(put(API_URI)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(usuario)))
+            .andExpect(status().isOk());
+
+        verify(usuarioService).save(UsuarioDto.convertFrom(usuario));
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void alterar_deveRetornarBadRequest_seCampoNomeEstiverComSizeMaiorQue80() {
+        var usuario = umUsuarioParaAtualizacao("Pedro", 431, 10, 3, "122.861.350-88");
+        usuario.setNome("Exemplo de um nome grande demais ".repeat(6));
+
+        mvc.perform(put(API_URI)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(usuario)))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo nome precisa ter entre 0 e 80 caracteres.")));
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void alterar_deveRetornarBadRequest_seCampoEmailEstiverComSizeMaiorQue80() {
+        var usuario = umUsuarioParaAtualizacao("Pedro", 431, 10, 3, "122.861.350-88");
+        usuario.setEmail("Exemplo de um email grande demais ".repeat(6));
+
+        mvc.perform(put(API_URI)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(usuario)))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo email precisa ter entre 0 e 80 caracteres.")));
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void alterar_deveRetornarBadRequest_seCampoEmail02EstiverComSizeMaiorQue80() {
+        var usuario = umUsuarioParaAtualizacao("Pedro", 431, 10, 3, "122.861.350-88");
+        usuario.setEmail02("Exemplo de um email grande demais ".repeat(6));
+
+        mvc.perform(put(API_URI)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(usuario)))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo email02 precisa ter entre 0 e 80 caracteres.")));
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void alterar_deveRetornarBadRequest_seCampoTelefoneEstiverComSizeMaiorQue100() {
+        var usuario = umUsuarioParaAtualizacao("Pedro", 431, 10, 3, "122.861.350-88");
+        usuario.setTelefone("Exemplo de um telefone grande demais ".repeat(6));
+
+        mvc.perform(put(API_URI)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(usuario)))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo telefone precisa ter entre 0 e 100 caracteres.")));
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void alterar_deveRetornarBadRequest_seCampoCpfEstiverComSizeMaiorQue14() {
+        var usuario = umUsuarioParaAtualizacao("Pedro", 431, 10, 3, "122.861.350-88");
+        usuario.setCpf("12345678912345678899");
+
+        mvc.perform(put(API_URI)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(usuario)))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo cpf precisa ter entre 0 e 14 caracteres.")));
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void alterar_deveRetornarBadRequest_seCampoRgEstiverComSizeMaiorQue25() {
+        var usuario = umUsuarioParaAtualizacao("Pedro", 431, 10, 3, "122.861.350-88");
+        usuario.setRg("123456789123456788992435346436436453356786");
+
+        mvc.perform(put(API_URI)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(usuario)))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo rg precisa ter entre 0 e 25 caracteres.")));
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void alterar_deveRetornarBadRequest_seCampoOrgaoExpedidorEstiverComSizeMaiorQue30() {
+        var usuario = umUsuarioParaAtualizacao("Pedro", 431, 10, 3, "122.861.350-88");
+        usuario.setOrgaoExpedidor("Exemplo de orgão grande demais".repeat(5));
+
+        mvc.perform(put(API_URI)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(usuario)))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo orgaoExpedidor precisa ter entre 0 e 30 caracteres.")));
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void alterar_deveRetornarBadRequest_seCampologinNetSalesEstiverComSizeMaiorQue120() {
+        var usuario = umUsuarioParaAtualizacao("Pedro", 431, 10, 3, "122.861.350-88");
+        usuario.setLoginNetSales("Exemplo de loginNetSales grande demais".repeat(20));
+
+        mvc.perform(put(API_URI)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(usuario)))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo loginNetSales precisa ter entre 0 e 120 caracteres.")));
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void alterar_deveRetornarBadRequest_seCamposObrigatoriosNaoPreenchidos() {
+        mvc.perform(put(API_URI)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(new UsuarioDto())))
+            .andExpect(status().isBadRequest()).andExpect(jsonPath("$", hasSize(7)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo email é obrigatório.",
+                "O campo nome é obrigatório.",
+                "O campo departamentoId é obrigatório.",
+                "O campo loginNetSales may not be empty",
+                "O campo unidadesNegociosId é obrigatório.",
+                "O campo cargoId é obrigatório.",
+                "O campo empresasId é obrigatório.")));
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithAnonymousUser
+    public void alterar_deveRetornarUnauthorized_seUsuarioSemAutorizacao() {
+        var usuario = umUsuarioParaAtualizacao("Pedro", 431, 10, 3, "122.861.350-88");
+
+        mvc.perform(put(API_URI)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(usuario)))
+            .andExpect(status().isUnauthorized());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"CTR_2033"})
+    public void alterar_deveRetornarForbidden_seUsuarioSemPermissao() {
+        var usuario = umUsuarioParaAtualizacao("Pedro", 431, 10, 3, "122.861.350-88");
+
+        mvc.perform(put(API_URI)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(usuario)))
+            .andExpect(status().isForbidden());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"CTR_2033"})
+    public void getAll_deveRetornarForbidden_quandoNaoTiverPermissaoParaGerenciaDeUsuario() {
+        mvc.perform(get(API_URI)
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isForbidden());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithAnonymousUser
+    public void getAll_deveRetornarUnauthorized_quandoNaoAutorizado() {
+        mvc.perform(get(API_URI)
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isUnauthorized());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void getAll_deveRetornarTodosOsUsuarios_quandoForAdmin() {
+        mvc.perform(get(API_URI)
                 .accept(MediaType.APPLICATION_JSON))
             .andExpect(status().isOk());
+
+        verify(usuarioService).getAll(any(PageRequest.class), any(UsuarioFiltros.class));
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void getUsuariosCargoSuperior_deveRetornarTodos_porCargoSuperior() {
+        mvc.perform(post(API_URI + "/cargo-superior/4")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(
+                    UsuarioCargoSuperiorPost
+                        .builder()
+                        .cidadeIds(List.of(1, 5578))
+                        .build())))
+            .andExpect(status().isOk());
+
+        verify(usuarioService).getUsuariosCargoSuperior(4, List.of(1, 5578));
+    }
+
+    @Test
+    @SneakyThrows
+    @WithAnonymousUser
+    public void getUsuariosCargoSuperior_deveRetornarUnauthorized_seUsuarioSemAutorizacao() {
+        mvc.perform(post(API_URI + "/cargo-superior/4")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(
+                    UsuarioCargoSuperiorPost
+                        .builder()
+                        .cidadeIds(List.of(1, 5578))
+                        .build())))
+            .andExpect(status().isUnauthorized());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"CTR_2033"})
+    public void getUsuariosCargoSuperior_deveRetornarForbidden_seUsuarioSemPermissao() {
+        mvc.perform(post(API_URI + "/cargo-superior/4")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(
+                    UsuarioCargoSuperiorPost
+                        .builder()
+                        .cidadeIds(List.of(1, 5578))
+                        .build())))
+            .andExpect(status().isForbidden());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void listarUsuario_deveRetornarTodosByCnpjAa_quandoFiltrar() {
+        mvc.perform(get(API_URI + "?cnpjAa=09.489.617/0001-97")
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isOk());
+
+        verify(usuarioService).getAll(any(PageRequest.class), any(UsuarioFiltros.class));
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"CTR_2033"})
+    public void listarUsuario_deveRetornarForbidden_seUsuarioSemPermissao() {
+        mvc.perform(get(API_URI + "?cnpjAa=09.489.617/0001-97")
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isForbidden());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithAnonymousUser
+    public void listarUsuario_deveRetornarUnauthorized_seUsuarioSemAutorizacao() {
+        mvc.perform(get(API_URI + "?cnpjAa=09.489.617/0001-97")
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isUnauthorized());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void save_deveSalvarSemFoto_quandoSolicitado() {
+        var usuario = umUsuario("JOAO");
+
+        mvc.perform(MockMvcRequestBuilders
+                .fileUpload(API_URI)
+                .file(umUsuario(usuario))
+                .contentType(MediaType.MULTIPART_FORM_DATA))
+            .andExpect(status().isOk());
+
+        verify(usuarioService).save(usuario, null);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void save_deveSalvarComFoto_quandoSolicitado() {
+        var usuario = umUsuario("JOAO");
+        var foto = umFileFoto();
+
+        mvc.perform(MockMvcRequestBuilders
+                .fileUpload(API_URI)
+                .file(foto)
+                .file(umUsuario(usuario))
+                .contentType(MediaType.MULTIPART_FORM_DATA))
+            .andExpect(status().isOk());
+
+        verify(usuarioService).save(usuario, foto);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void getById_deveSalvarComFoto_quandoSolicitado() {
+        mvc.perform(get(API_URI + "/1")
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isOk());
+
+        verify(usuarioService).getUsuarioById(1);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"CTR_2033"})
+    public void getById_deveRetornarForbidden_quandoSemPermissao() {
+        mvc.perform(get(API_URI + "/1")
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isForbidden());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithAnonymousUser
+    public void getById_deveRetornarUnauthorized_quandoUsuarioSemAutorizacao() {
+        mvc.perform(get(API_URI + "/1")
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isUnauthorized());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void saveConfiguracao_deveSalvarAConfiguracaoDoUsuario_seUsuarioPossuirPermissao() {
+        var dto = new UsuarioConfiguracaoSaveDto();
+        dto.setUsuarioId(ID_USUARIO_HELPDESK);
+        dto.setRamal(1234);
+
+        mvc.perform(post(API_URI + "/configuracao")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(dto)))
+            .andExpect(status().isOk());
+
+        verify(usuarioService).saveUsuarioConfiguracao(dto);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"CTR_2033"})
+    public void saveConfiguracao_deveRetornarForbidden_seUsuarioSemPermissao() {
+        var dto = new UsuarioConfiguracaoSaveDto();
+        dto.setUsuarioId(ID_USUARIO_HELPDESK);
+        dto.setRamal(1234);
+
+        mvc.perform(post(API_URI + "/configuracao")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(dto)))
+            .andExpect(status().isForbidden());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithAnonymousUser
+    public void saveConfiguracao_deveRetornarUnauthorized_seUsuarioSemAutorizacao() {
+        var dto = new UsuarioConfiguracaoSaveDto();
+        dto.setUsuarioId(ID_USUARIO_HELPDESK);
+        dto.setRamal(1234);
+
+        mvc.perform(post(API_URI + "/configuracao")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(dto)))
+            .andExpect(status().isUnauthorized());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void saveConfiguracao_deveRetornarBadRequest_quandoDadosObrigatoriosNaoPreenchidos() {
+        mvc.perform(MockMvcRequestBuilders
+                .fileUpload(API_URI)
+                .file(umUsuario(umUsuarioParaEditar()))
+                .contentType(MediaType.MULTIPART_FORM_DATA))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(5)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo email é obrigatório.",
+                "O campo departamentoId é obrigatório.",
+                "O campo unidadesNegociosId é obrigatório.",
+                "O campo cargoId é obrigatório.",
+                "O campo empresasId é obrigatório.")));
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void inativar_deveInativarUsuario_seUsuarioPossuirAutorizacao() {
+        mvc.perform(post(API_URI + "/inativar")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(umUsuarioParaInativar())))
+            .andExpect(status().isOk());
+
+        verify(usuarioService).inativar(umUsuarioParaInativar());
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void inativar_deveRetornarBadRequest_seCamposObrigatoriosNaoPreenchidos() {
+        mvc.perform(post(API_URI + "/inativar")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(new UsuarioInativacaoDto())))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo idUsuario é obrigatório.")));
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void inativar_deveRetornarBadRequest_seAlgumCampoEstiverComSizeMaiorQueOPermitido() {
+        var usuarioInativacao = umUsuarioParaInativar();
+        usuarioInativacao.setObservacao("exemplo de uma descrição grande".repeat(20));
+
+        mvc.perform(post(API_URI + "/inativar")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(new UsuarioInativacaoDto())))
+            .andExpect(status().isBadRequest());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"CTR_2033"})
+    public void inativar_deveRetornarForbidden_seUsuarioSemPermissao() {
+        mvc.perform(post(API_URI + "/inativar")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(umUsuarioParaInativar())))
+            .andExpect(status().isForbidden());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithAnonymousUser
+    public void inativar_deveRetornarUnauthorized_seUsuarioSemAutorizacao() {
+        mvc.perform(post(API_URI + "/inativar")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(umUsuarioParaInativar())))
+            .andExpect(status().isUnauthorized());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void ativar_deveAtivarUsuario_seUsuarioPossuirAutorizacao() {
+        mvc.perform(put(API_URI + "/ativar")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(umUsuarioParaAtivar())))
+            .andExpect(status().isOk());
+
+        verify(usuarioService).ativar(any(UsuarioAtivacaoDto.class));
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void ativar_deveRetornarBadRequest_seCamposObrigatoriosNaoPreenchidos() {
+        mvc.perform(put(API_URI + "/ativar")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(new UsuarioAtivacaoDto())))
+            .andExpect(status().isBadRequest())
+            .andExpect(jsonPath("$", hasSize(1)))
+            .andExpect(jsonPath("$[*].message", containsInAnyOrder(
+                "O campo idUsuario é obrigatório.")));
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void ativar_deveRetornarBadRequest_seAlgumCampoEstiverComSizeMaiorQueOPermitido() {
+        var usuarioAtivacao = umUsuarioParaAtivar();
+        usuarioAtivacao.setObservacao("exemplo de uma descrição grande".repeat(20));
+
+        mvc.perform(put(API_URI + "/ativar")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(usuarioAtivacao)))
+            .andExpect(status().isBadRequest());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"CTR_2033"})
+    public void ativar_deveRetornarForbidden_seUsuarioSemPermissao() {
+        mvc.perform(put(API_URI + "/ativar")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(umUsuarioParaInativar())))
+            .andExpect(status().isForbidden());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithAnonymousUser
+    public void ativar_deveRetornarUnauthorized_seUsuarioSemAutorizacao() {
+        mvc.perform(put(API_URI + "/ativar")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(umUsuarioParaInativar())))
+            .andExpect(status().isUnauthorized());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void alterarSenhaEReenviarPorEmail_deveAlterarASenhaDoUsuario_seUsuarioPossuirPermissao() {
+        mvc.perform(put(API_URI + "/100/senha")
+                .contentType(MediaType.APPLICATION_JSON))
+            .andExpect(status().isOk());
+
+        verify(usuarioService).alterarSenhaEReenviarPorEmail(anyInt());
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"CTR_2033"})
+    public void alterarSenhaEReenviarPorEmail_deveRetornarForbidden_seUsuarioSemPermissao() {
+        mvc.perform(put(API_URI + "/100/senha")
+                .contentType(MediaType.APPLICATION_JSON))
+            .andExpect(status().isForbidden());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithAnonymousUser
+    public void alterarSenhaEReenviarPorEmail_deveRetornarUnauthorized_seUsuarioSemAutorizacao() {
+        mvc.perform(put(API_URI + "/100/senha")
+                .contentType(MediaType.APPLICATION_JSON))
+            .andExpect(status().isUnauthorized());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void getFuncionalidadeByUsuario_deveRetornarPermissoes_seUsuarioPossuirPermissao() {
+        mvc.perform(get(API_URI + "/100/permissoes")
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isOk());
+
+        verify(usuarioService).findPermissoesByUsuario(anyInt());
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"CTR_2033"})
+    public void getFuncionalidadeByUsuario_deveRetornarForbidden_seUsuarioSemPermissao() {
+        mvc.perform(get(API_URI + "/100/permissoes")
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isForbidden());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithAnonymousUser
+    public void getFuncionalidadeByUsuario_deveRetornarUnauthorized_seUsuarioSemAutorizacao() {
+        mvc.perform(get(API_URI + "/100/permissoes")
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isUnauthorized());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void getCidadesByUsuario_deveRetornarCidadesAtreladasAoUsuario_seUsuarioPossuirPermissao() {
+        mvc.perform(get(API_URI + "/100/cidades")
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isOk());
+
+        verify(usuarioService).getCidadeByUsuario(anyInt());
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"CTR_2033"})
+    public void getCidadesByUsuario_deveRetornarForbidden_seUsuarioSemPermissao() {
+        mvc.perform(get(API_URI + "/100/cidades")
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isForbidden());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithAnonymousUser
+    public void getCidadesByUsuario_deveRetornarUnauthorized_seUsuarioSemAutorizacao() {
+        mvc.perform(get(API_URI + "/100/cidades")
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isUnauthorized());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void alterarDadosAcessoEmail_deveAlterarOEmailDoUsuario_seUsuarioPossuirPermissao() {
+        mvc.perform(put(API_URI + "/acesso/email")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(umRequestDadosAcessoEmail())))
+            .andExpect(status().isOk());
+
+        verify(usuarioService).alterarDadosAcessoEmail(umRequestDadosAcessoEmail());
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"CTR_2033"})
+    public void alterarDadosAcessoEmail_deveRetornarForbidden_seUsuarioSemPermissao() {
+        mvc.perform(put(API_URI + "/acesso/email")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(umRequestDadosAcessoEmail())))
+            .andExpect(status().isForbidden());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithAnonymousUser
+    public void alterarDadosAcessoEmail_deveRetornarUnauthorized_seUsuarioSemAutorizacao() {
+        mvc.perform(put(API_URI + "/acesso/email")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(umRequestDadosAcessoEmail())))
+            .andExpect(status().isUnauthorized());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    public void alterarDadosAcessoSenha_deveAlterarASenhaDoUsuario_seSolicitado() {
+        mvc.perform(put(API_URI + "/acesso/senha")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(convertObjectToJsonBytes(umRequestDadosAcessoSenha())))
+            .andExpect(status().isOk());
+
+        verify(usuarioService).alterarDadosAcessoSenha(umRequestDadosAcessoSenha());
+    }
+
+    @Test
+    @SneakyThrows
+    public void getUsuarioSuperior_deveRetornarOSuperiorDoUsuario_seSolicitado() {
+        mvc.perform(get(API_URI + "/101/supervisor")
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isOk());
+
+        verify(usuarioService).getUsuarioSuperior(101);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void getUsuarioSuperiores_deveRetornarOSuperioresDoUsuario_seUsuarioPossuirPermissao() {
+        mvc.perform(get(API_URI + "/101/supervisores")
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isOk());
+
+        verify(usuarioService).getUsuarioSuperiores(101);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"CTR_2033"})
+    public void getUsuarioSuperiores_deveRetornarForbidden_seUsuarioSemPermissao() {
+        mvc.perform(get(API_URI + "/101/supervisores")
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isForbidden());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithAnonymousUser
+    public void getUsuarioSuperiores_deveRetornarUnauthorized_seUsuarioSemAutorizacao() {
+        mvc.perform(get(API_URI + "/101/supervisores")
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isUnauthorized());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void getCsv_deveRetornarCsvFormatadoCorretamente_seUsuarioPossuirPermissao() {
+        mvc.perform(get(API_URI + "/csv")
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isOk());
+
+        verify(usuarioService).exportUsuariosToCsv(any(UsuarioFiltros.class), any(HttpServletResponse.class));
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"CTR_2033"})
+    public void getCsv_deveRetornarForbidden_seUsuarioSemPermissao() {
+        mvc.perform(get(API_URI + "/csv")
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isForbidden());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithAnonymousUser
+    public void getCsv_deveRetornarUnauthorized_seUsuarioSemAutorizacao() {
+        mvc.perform(get(API_URI + "/csv")
+                .accept(MediaType.APPLICATION_JSON))
+            .andExpect(status().isUnauthorized());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void validarSeUsuarioNovoCadastro_deveValidarSeENovoCadastro_quandoSolicitado() {
+        mvc.perform(get(API_URI + "/existir/usuario")
+                .param("email", "JOHN@GMAIL.COM")
+                .param("cpf", "48503182076"))
+            .andExpect(status().isOk());
+
+        verify(usuarioService)
+            .validarSeUsuarioCpfEmailNaoCadastrados(any(UsuarioExistenteValidacaoRequest.class));
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void getUsuariosHierarquia_deveBuscarUsuariosHierarquia_seUsuarioAutenticado() {
+        mvc.perform(get(API_URI + "/hierarquia/1"))
+            .andExpect(status().isOk());
+
+        verify(usuarioService).getUsuariosHierarquia(1);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"CTR_2033"})
+    public void getUsuariosHierarquia_deveRetornarForbidden_seUsuarioSemPermissao() {
+        mvc.perform(get(API_URI + "/hierarquia/1"))
+            .andExpect(status().isForbidden());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithAnonymousUser
+    public void getUsuariosHierarquia_deveRetornarUnauthorized_seUsuarioSemAutorizacao() {
+        mvc.perform(get(API_URI + "/hierarquia/1"))
+            .andExpect(status().isUnauthorized());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void getByEmail_deveBuscarUsuarioPorEmail_seUsuarioAutenticado() {
+        mvc.perform(get(API_URI)
+                .param("email", "teste"))
+            .andExpect(status().isOk());
+
+        verify(usuarioService).findByEmail("teste");
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"CTR_2033"})
+    public void getByEmail_deveRetornarForbidden_seUsuarioSemPermissao() {
+        mvc.perform(get(API_URI)
+                .param("email", "teste"))
+            .andExpect(status().isForbidden());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithAnonymousUser
+    public void getByEmail_deveRetornarUnauthorized_seUsuarioSemAutorizacao() {
+        mvc.perform(get(API_URI)
+                .param("email", "teste"))
+            .andExpect(status().isUnauthorized());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"AUT_VISUALIZAR_USUARIO"})
+    public void limparCpf_deveLimparCpfUsuario_seUsuarioAutenticado() {
+        mvc.perform(put(API_URI + "/limpar-cpf/1"))
+            .andExpect(status().isOk());
+
+        verify(usuarioService).limparCpfUsuario(1);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithMockUser(username = ADMIN, roles = {"CTR_2033"})
+    public void limparCpf_deveRetornarForbidden_seUsuarioSemPermissao() {
+        mvc.perform(put(API_URI + "/limpar-cpf/1"))
+            .andExpect(status().isForbidden());
+
+        verifyNoMoreInteractions(usuarioService);
+    }
+
+    @Test
+    @SneakyThrows
+    @WithAnonymousUser
+    public void limparCpf_deveRetornarUnauthorized_seUsuarioSemAutorizacao() {
+        mvc.perform(put(API_URI + "/limpar-cpf/1"))
+            .andExpect(status().isUnauthorized());
+
+        verifyNoMoreInteractions(usuarioService);
     }
 
     private UsuarioDadosAcessoRequest umRequestDadosAcessoEmail() {
@@ -799,12 +1374,18 @@ public class UsuarioGerenciaControllerTest {
         return dto;
     }
 
+    private UsuarioAtivacaoDto umUsuarioParaAtivar() {
+        var dto = new UsuarioAtivacaoDto();
+        dto.setIdUsuario(ID_USUARIO_HELPDESK);
+        dto.setObservacao("Teste inativação");
+        return dto;
+    }
+
     private UsuarioDto umUsuarioParaEditar() {
-        var usuario = repository.findComplete(ID_USUARIO_HELPDESK).get();
-        usuario.forceLoad();
-        usuario.setNome("JOAOZINHO");
-        usuario.setLoginNetSales("MIDORIYA SHOUNEN");
-        return UsuarioDto.of(usuario);
+        return UsuarioDto.builder()
+            .nome("JOAOZINHO")
+            .loginNetSales("MIDORIYA SHOUNEN")
+            .build();
     }
 
     private UsuarioDto umUsuario(String nome) {
@@ -813,11 +1394,11 @@ public class UsuarioGerenciaControllerTest {
         usuario.setCargoId(2);
         usuario.setDepartamentoId(1);
         usuario.setCpf("097.238.645-92");
-        usuario.setUnidadesNegociosId(Arrays.asList(1));
+        usuario.setUnidadesNegociosId(List.of(1));
         usuario.setEmpresasId(singletonList(4));
         usuario.setEmail("usuario@teste.com");
         usuario.setTelefone("43 995565661");
-        usuario.setHierarquiasId(Arrays.asList(100));
+        usuario.setHierarquiasId(List.of(100));
         usuario.setCidadesId(Arrays.asList(736, 2921, 527));
         usuario.setLoginNetSales("MIDORIYA SHOUNEN");
         usuario.setCanais(Sets.newHashSet(ECanal.AGENTE_AUTORIZADO, ECanal.D2D_PROPRIO));
@@ -825,9 +1406,20 @@ public class UsuarioGerenciaControllerTest {
         return usuario;
     }
 
-    private MockMultipartFile umUsuario(UsuarioDto usuario)  {
+    private MockMultipartFile umUsuario(UsuarioDto usuario) {
         byte[] json = convertObjectToJsonString(usuario).getBytes(StandardCharsets.UTF_8);
         return new MockMultipartFile("usuario", "json", "application/json", json);
+    }
+
+    private UsuarioBackofficeDto umUsuarioDtoBackoffice() {
+        var usuario = new UsuarioBackofficeDto();
+        usuario.setNome("USUARIO BACKOFFICE");
+        usuario.setCargoId(110);
+        usuario.setEmail("usuarioBackoffice@gmail.com");
+        usuario.setDepartamentoId(69);
+        usuario.setCpf("870.371.018-18");
+        usuario.setNascimento(LocalDate.of(2000, 1, 1));
+        return usuario;
     }
 
     private UsuarioDto umUsuarioParaAtualizacao(String nome, Integer id, Integer cargo, Integer departamento, String cpf) {
@@ -837,43 +1429,21 @@ public class UsuarioGerenciaControllerTest {
         usuario.setCargoId(cargo);
         usuario.setDepartamentoId(departamento);
         usuario.setCpf(cpf);
-        usuario.setUnidadesNegociosId(Arrays.asList(1));
+        usuario.setUnidadesNegociosId(List.of(1));
         usuario.setEmpresasId(singletonList(4));
         usuario.setEmail("usuario@teste.com");
         usuario.setTelefone("43 995565661");
-        usuario.setHierarquiasId(Arrays.asList(100));
+        usuario.setHierarquiasId(List.of(100));
         usuario.setCidadesId(Arrays.asList(736, 2921, 527));
         usuario.setLoginNetSales("MIDORIYA SHOUNEN");
-        usuario.setCanais(Sets.newHashSet(ECanal.AGENTE_AUTORIZADO));
-        usuario.setSubCanaisId(Sets.newHashSet(1));
+        usuario.setCanais(Sets.newHashSet(ECanal.D2D_PROPRIO));
         usuario.setSituacao(ESituacao.A);
         usuario.setSubCanaisId(Sets.newHashSet(1));
         return usuario;
     }
 
-    private void mockResponseAgenteAutorizado() {
-        var response = AgenteAutorizadoResponse.builder()
-            .id("100")
-            .cnpj("09.489.617/0001-97")
-            .build();
-
-        when(agenteAutorizadoNovoClient.getAaByCpnj(Matchers.anyMap()))
-            .thenReturn(response);
-    }
-
-    private void mockResponseUsuariosAgenteAutorizado() {
-        List<UsuarioAgenteAutorizadoResponse> response = new ArrayList<>();
-        response.add(new UsuarioAgenteAutorizadoResponse(100));
-        response.add(new UsuarioAgenteAutorizadoResponse(101));
-        response.add(new UsuarioAgenteAutorizadoResponse(104));
-        response.add(new UsuarioAgenteAutorizadoResponse(105));
-
-        when(agenteAutorizadoNovoClient.getUsuariosByAaId(Matchers.anyInt(), Matchers.anyBoolean()))
-            .thenReturn(response);
-    }
-
     private MockMultipartFile umFileFoto() throws Exception {
-        byte[] bytes = toByteArray(getFileInputStream("foto_usuario/file.png"));
+        var bytes = toByteArray(getFileInputStream("foto_usuario/file.png"));
         return new MockMultipartFile("foto",
             LocalDateTime.now().toString().concat("file.png"),
             "image/png",
@@ -885,110 +1455,5 @@ public class UsuarioGerenciaControllerTest {
             Files.readAllBytes(Paths.get(
                 getClass().getClassLoader().getResource(file)
                     .getPath())));
-    }
-
-    private List<UsuarioCsvResponse> doisUsuariosCsvResponse() {
-        return asList(
-            UsuarioCsvResponse.builder()
-                .id(1)
-                .nome("Usuario Csv")
-                .email("usuario_csv@xbrain.com.br")
-                .telefone("(43) 2323-1782")
-                .cpf("75400072062")
-                .cargo("Vendedor")
-                .departamento("Comercial")
-                .unidadesNegocios("X-Brain. Claro Residencial")
-                .empresas("X-Brain. Claro TV")
-                .situacao(ESituacao.A)
-                .build(),
-            UsuarioCsvResponse.builder()
-                .id(2)
-                .nome("Usuario Teste")
-                .email("usuario_teste@xbrain.com.br")
-                .telefone("(43) 4575-5878")
-                .cpf("04803828083")
-                .cargo("Vendedor")
-                .departamento("Comercial")
-                .unidadesNegocios("X-Brain. Residencial e Combos")
-                .empresas("X-Brain. Claro TV")
-                .situacao(ESituacao.A)
-                .build()
-        );
-    }
-
-    private List<UsuarioCsvResponse> doisUsuariosCsvResponseSemEmpresasEUnidadesNegocios() {
-        return asList(
-            UsuarioCsvResponse.builder()
-                .id(1)
-                .nome("Usuario Csv")
-                .email("usuario_csv@xbrain.com.br")
-                .telefone("(43) 2323-1782")
-                .cpf("75400072062")
-                .cargo("Vendedor")
-                .departamento("Comercial")
-                .situacao(ESituacao.A)
-                .build(),
-            UsuarioCsvResponse.builder()
-                .id(2)
-                .nome("Usuario Teste")
-                .email("usuario_teste@xbrain.com.br")
-                .telefone("(43) 4575-5878")
-                .cpf("04803828083")
-                .cargo("Vendedor")
-                .departamento("Comercial")
-                .situacao(ESituacao.A)
-                .build()
-        );
-    }
-
-    private UsuarioDto umUsuarioSupervisorD2d() {
-        return UsuarioDto.builder()
-            .id(1660123)
-            .nome("USUARIO D2D")
-            .email("USUARIOD2D@TESTE.COM")
-            .cpf("442.341.797-95")
-            .cargoId(10)
-            .cargoCodigo(CodigoCargo.SUPERVISOR_OPERACAO)
-            .canais(Set.of(ECanal.D2D_PROPRIO))
-            .subCanaisId(Set.of(2))
-            .empresasId(List.of(1, 2, 3, 5))
-            .unidadesNegociosId(List.of(2))
-            .loginNetSales("LOGINUSUARIOD2D")
-            .departamentoId(21)
-            .build();
-    }
-
-    private UsuarioDto umUsuarioCoordenadorD2d() {
-        return UsuarioDto.builder()
-            .id(1660123)
-            .nome("USUARIO D2D")
-            .email("USUARIOD2D@TESTE.COM")
-            .cpf("442.341.797-95")
-            .cargoId(10)
-            .cargoCodigo(CodigoCargo.COORDENADOR_OPERACAO)
-            .canais(Set.of(ECanal.D2D_PROPRIO))
-            .subCanaisId(Set.of(2, 3, 4))
-            .empresasId(List.of(1, 2, 3, 5))
-            .unidadesNegociosId(List.of(2))
-            .loginNetSales("LOGINUSUARIOD2D")
-            .departamentoId(21)
-            .build();
-    }
-
-    private UsuarioDto umUsuarioQueEraCanalD2dAlterandoParaCanalAtivo() {
-        return UsuarioDto.builder()
-            .id(1660123)
-            .nome("USUARIO D2D")
-            .email("USUARIOD2D@TESTE.COM")
-            .cpf("442.341.797-95")
-            .cargoId(10)
-            .cargoCodigo(CodigoCargo.SUPERVISOR_OPERACAO)
-            .canais(Set.of(ECanal.ATIVO_PROPRIO))
-            .subCanaisId(Set.of())
-            .empresasId(List.of(1, 2, 3, 5))
-            .unidadesNegociosId(List.of(2))
-            .loginNetSales("LOGINUSUARIOD2D")
-            .departamentoId(21)
-            .build();
     }
 }
